# ccleaner

./: CMakeLists.txt  README.md  app.cpp  app.h  ccleaner.cfg  ccleaner.pro  cleaner.cpp  cleaner.h  configs.cpp  configs.h  main.cpp
